--- a/02-starting-with-data_wehi.Rmd
+++ b/02-starting-with-data_wehi.Rmd
@@ -6,7 +6,7 @@ minutes: 20
 ---
 
 ```{r, echo=FALSE, purl=FALSE, message = FALSE}
-source("setup.R")
+source("setup_wehi.R")
 ```
 
 ------------
@@ -108,10 +108,6 @@ Based on the output of `str(cytokines)`, can you answer the following questions?
 
 ```
 
-As you can see, the column `group` is of a special class called
-`factor`. Before we learn more about the `data.frame` class, we are going to
-talk about factors. They are very useful but not necessarily intuitive, and
-therefore require some attention.
 
 
 ## Factors
@@ -133,13 +129,10 @@ Once created, factors can only contain a pre-defined set values, known as
 instance, if you have a factor with 2 levels:
 
 ```{r, purl=TRUE}
-cell <- factor(c("neutrophil", "monocyte", "monocyte", "neutrophil"))
+cell <- factor(c("neutrophil", "eosinophil", "eosinophil", "neutrophil"))
 ```
 
-R will assign `1` to the level `"monocyte"` and `2` to the level `"neutrophil"` (because
-`m` comes before `n`, even though the first element in this vector is
-`"neutrophil"`). You can check this by using the function `levels()`, and check the
-number of levels using `nlevels()`:
+R will assign `1` to the level `"eosinophil"` and `2` to the level `"neutrophil"` (because `e` comes before `n`, even though the first element in this vector is `"neutrophil"`). You can check this by using the function `levels()`, and check the number of levels using `nlevels()`:
 
 ```{r, purl=FALSE}
 levels(cell)
