updated analysis of cytokine data, new data set with 3 groups

--- a/03-data-frames_wehi.Rmd
+++ b/03-data-frames_wehi.Rmd
@@ -6,7 +6,7 @@ minutes: 30
 ---
 
 ```{r, echo=FALSE, purl=FALSE, message = FALSE}
-source("setup.R")
+source("setup_wehi.R")
 cytokines <- read.csv("data/cytokines.csv")
 ```
 
