--- a/02-starting-with-data_wehi.Rmd
+++ b/02-starting-with-data_wehi.Rmd
@@ -13,12 +13,35 @@ source("setup_wehi.R")
 
 > ## Learning Objectives
 >
-> * load external data (CSV files) in memory using the cytokine table
+> * Build an understanding of the concepts of a `data.frame`
+> * Understand how to load external data (CSV files) in memory using
 >  (`cytokines.csv`) as an example
-> * explore the structure and the content of the data in R
-> * understand what are factors and how to manipulate them
+> * Explore the structure and the content of the data in R
+> * Understand what are factors and how to manipulate them
 
 ------------
+# Data Frames
+
+`data.frame` is the _de facto_ data structure for most tabular data and what we
+use for statistics and plotting.
+
+A `data.frame` is a collection of vectors of identical lengths. Each vector
+represents a column, and each vector can be of a different data type (e.g.,
+characters, integers, factors). The `str()` function is useful to inspect the
+data types of the columns.
+
+A `data.frame` can be created by the functions `read.csv()` or `read.table()`.
+
+By default, `data.frame` converts (= coerces) columns that contain characters
+(i.e., text) into the `factor` data type. Depending on what you want to do with
+the data, you may want to keep these columns as `character`. To do so,
+`read.csv()` and `read.table()` have an argument called `stringsAsFactors` which
+can be set to `FALSE`:
+
+```{r, eval=FALSE, purl=FALSE}
+some_data <- read.csv("data/some_file.csv", stringsAsFactors=FALSE)
+```
+
 
 # Presentation of Cytokine Data
 
@@ -119,21 +142,27 @@ Based on the output of `str(cytokines)`,
 Factors are used to represent categorical data. Factors can be ordered or
 unordered and are an important class for statistical analysis and for plotting.
 
-Factors contain a pre-defined set values, known as *levels*. By default, R always sorts *levels* in alphabetical order. For instance, if you have a factor with 2 levels:
+Factors contain a pre-defined set values, known as *levels*. By default, R always sorts *levels* in alphabetical order. It will assign `1` to the first level, `2` to the next, and so on. Let's look at our cytokine dataset:
 
 ```{r, purl=TRUE}
-cell <- factor(c("neutrophil", "eosinophil", "eosinophil", "neutrophil"))
+str(cytokines)
+cytokines$group
+levels(cytokines$group)    # names of unique levels within our 'group' column
+nlevels(cytokines$group)   # number of unique levels 
 ```
-
-R will assign `1` to the level `"eosinophil"` and `2` to the level `"neutrophil"` (because `e` comes before `n`, even though the first element in this vector is `"neutrophil"`). You can check this by using the function `levels()`, and check the number of levels using `nlevels()`:
-
-```{r, purl=FALSE}
-levels(cell)
-nlevels(cell)
-```
-
 
 ### Converting factors 
 
 If you need to convert a factor to a character vector, simply use
-`as.character(x)`.
+`as.character(x)`. For example:
+
+```{r, purl=TRUE}
+cytokines$group <- as.character(cytokines$group)
+str(cytokines)
+```
+
+Now convert it back to a factor:
+```{r, purl=TRUE}
+cytokines$group <- as.factor(cytokines$group)
+str(cytokines)
+```
