--- a/02-starting-with-data_wehi.Rmd
+++ b/02-starting-with-data_wehi.Rmd
@@ -77,7 +77,7 @@ by typing `dir.create("data")` at the terminal.
 - Third, download the data:
 
 ```{r, eval=FALSE, purl=TRUE}
-download.file("http://files.figshare.com/2441263/cytokines.csv",
+download.file("http://figshare.com/articles/WEHI_R_Demo/1604914",
               "data/cytokines.csv")
 ```
 
