--- a/02-starting-with-data_wehi.Rmd
+++ b/02-starting-with-data_wehi.Rmd
@@ -84,7 +84,7 @@ download.file("http://files.figshare.com/2443264/cytokines_3groups.csv",
 You are now ready to load the data:
 
 ```{r, eval=TRUE,  purl=FALSE}
-cytokines <- read.csv('cytokines_3groups.csv')
+cytokines <- read.csv('data/cytokines_3groups.csv')
 ```
 
 This statement doesn't produce any output because assignment doesn't display
@@ -95,7 +95,7 @@ Alternatively, wrapping an assignment in parentheses will perform the assignment
 and display it at the same time.
 
 ```{r, eval = TRUE, purl = FALSE}
-(cytokines <- read.csv('data/cytokines.csv'))
+(cytokines <- read.csv('data/cytokines_3groups.csv'))
 ```
 
 Check the top (the first 6 lines) of this `data.frame` using the
